[project]
name = "mlx-lm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=23.0.0",
    "aiohttp>=3.12.15",
    "fastapi>=0.100.0",
    "gunicorn>=21.0.0",
    "jinja2>=3.1.6",
    "mlx>=0.26.0",
    "numpy>=2.3.2",
    "protobuf>=6.31.1",
    "python-multipart>=0.0.6",
    "pyyaml>=6.0.2",
    "transformers>=4.39.3",
    "uvicorn[standard]>=0.23.0",
]
